Changelog
=========

1.1b1 - unreleased
------------------


1.1a3 - 2009-12-27
------------------

- Use the flag of Bangladesh for the Bengali language (code: bn) in general
  and not only for the ``bn-bd`` variant. This closes
  http://dev.plone.org/plone/ticket/9950.
  [hannosch]

- Fixed the IIDNormalizer to generate valid CSS ID or Python variable names as
  specified in its docstring. It no longer tries to preserve filename
  extensions. This closes http://dev.plone.org/plone/ticket/9708.
  [hannosch]

- Added a new explicit base normalizer for Thai, as the Unidecode based
  transliteration isn't good enough.
  [hannosch]

- Added new specific normalizer for Japanese, which avoids the Unidecode based
  transliteration. This refs http://dev.plone.org/plone/ticket/9914.
  [hannosch]

1.1a2 - 2009-12-02
------------------

- Depend on and include ``Unidecode`` based transliterations. These provide
  more meaningful results than unicodedata NFKD normalizations or hex codes.
  [hannosch]

- Added cs-cz combined language code. It solves problem with default language
  on new Plone site creation (Safari/Mac).
  [naro]

- Added missing 'native' descriptions to pt-* combined languages.
  [igbun]

1.1a1 - 2009-04-04
------------------

- Removed the negotiator sub-package, as it hasn't been enabled or used yet.
  The functionality is better placed as a WSGI-middleware.
  [hannosch]

- Register all dependencies in setup.py. Move test dependencies into a
  separate extra to keep the dependencies low so things like the normalizer
  can be used in non-zope contexts.
  [wichert]

1.0.9 - Unreleased
------------------

- Added Romanian language as the language for the .ro TLD. This closes
  http://dev.plone.org/plone/ticket/9152
  [vincentfretin]

1.0.8 - 2009-10-15
------------------

- Added new UNDERSCORE_START_REGEX to the file normalizer. This removes any
  leading underscores from uploaded file names. Objects in Zope cannot start