@@ -1,13 +1,15 @@
 import string
 from unicodedata import normalize, decomposition
 
-from unidecode import unidecode
-
-
 # On OpenBSD string.whitespace has a non-standard implementation
 # See http://dev.plone.org/plone/ticket/4704 for details
 whitespace = ''.join([c for c in string.whitespace if ord(c) < 128])
 allowed = string.ascii_letters + string.digits + string.punctuation + whitespace
+
+CHAR = {}
+NULLMAP = ['' * 0x100]
+UNIDECODE_LIMIT = 0x0530
+
 
 def mapUnicode(text, mapping=()):
     """
@@ -26,7 +28,8 @@ def mapUnicode(text, mapping=()):
     # always apply base normalization
     return baseNormalize(res)
 
-def baseNormalize(text, transliterate=True):
+
+def baseNormalize(text):
     """
     This method is used for normalization of unicode characters to the base ASCII
     letters. Output is ASCII encoded string (or char) with only ASCII letters,
@@ -36,38 +39,62 @@ def baseNormalize(text, transliterate=True):
       '123'
 
       >>> baseNormalize(u'a\u0fff')
-      'a'
+      'afff'
 
       >>> baseNormalize(u"foo\N{LATIN CAPITAL LETTER I WITH CARON}")
       'fooI'
 
       >>> baseNormalize(u"\u5317\u4EB0")
-      'Bei Jing'
+      '53174eb0'
     """
     if not isinstance(text, basestring):
         # This most surely ends up in something the user does not expect
         # to see. But at least it does not break.
         return repr(text)
 
-    if transliterate:
-        text = unidecode(text)
-
     text = text.strip()
 
-    res = u''
+    res = []
     for ch in text:
         if ch in allowed:
             # ASCII chars, digits etc. stay untouched
-            res += ch
+            res.append(ch)
         else:
             ordinal = ord(ch)
-            if decomposition(ch):
+            if ordinal < UNIDECODE_LIMIT:
+                h = ordinal >> 8
+                l = ordinal & 0xff
+
+                c = CHAR.get(h, None)
+
+                if c == None:
+                    try:
+                        mod = __import__('unidecode.x%02x'%(h), [], [], ['data'])
+                    except ImportError:
+                        CHAR[h] = NULLMAP
+                        res.append('')
+                        continue
+
+                    CHAR[h] = mod.data
+
+                    try:
+                        res.append( mod.data[l] )
+                    except IndexError:
+                        res.append('')
+                else:
+                    try:
+                        res.append( c[l] )
+                    except IndexError:
+                        res.append('')
+
+            elif decomposition(ch):
                 normalized = normalize('NFKD', ch).strip()
                 # string may contain non-letter chars too. Remove them
                 # string may result to more than one char
-                res += ''.join([c for c in normalized if c in allowed])
+                res.append(''.join([c for c in normalized if c in allowed]))
+
             else:
                 # hex string instead of unknown char
-                res += "%x" % ordinal
+                res.append("%x" % ordinal)
 
-    return res.encode('ascii')
+    return ''.join(res).encode('ascii')
