@@ -1,32 +1,0 @@
-# -*- coding: UTF-8 -*-
-
-from plone.i18n.normalizer.interfaces import INormalizer
-from zope.interface import implements
-from plone.i18n.normalizer.base import baseNormalize
-
-
-class Normalizer(object):
-    """
-    This normalizer can normalize any unicode string and returns a version
-    that only contains of ASCII characters.
-
-    Let's make sure that this implementation actually fulfills the API.
-
-      >>> from zope.interface.verify import verifyClass
-      >>> verifyClass(INormalizer, Normalizer)
-      True
-
-      >>> norm = Normalizer()
-      >>> text = unicode("หน้า ทดสอบ", 'utf-8')
-      >>> norm.normalize(text)
-      'e2be19e49e32 e17e14e2ae2de1a'
-    """
-    implements(INormalizer)
-
-    def normalize(self, text, locale=None, max_length=None):
-        """
-        Returns a normalized text. text has to be a unicode string.
-        """
-        return baseNormalize(text, transliterate=False)
-
-normalizer = Normalizer()
